@@ -1,242 +1,517 @@
 ![Gebo.ai image logo](https://raw.githubusercontent.com/geboai/Gebo.ai/develop/gebo.ui/projects/gebo-ai-reusable-ui/src/assets/Gebo-1000.png)
 
-# Gebo.ai, The open source Enterprise AI vendor agnostic platform (visit [https://gebo.ai](https://gebo.ai))
+# Gebo.ai, The open source Enterprise AI vendor agnostic platform (visit https://gebo.ai)
 
-### This image is suitable to be installed with docker-compose
+**Enterprise RAG · AI Agents · Deep Search · MCP · Cloud or On-Premise**
 
-This software is an **open source enterprise retrieve augmented generation platform** that can be installed in every company to take the most out from their documentation and informations using modern large language models.
-It's a "No AI vendor lock-in" alternative to cloud vendors platform, it can work with almost all cloud or on premise AI infrastructures and connects to widely used enterprise systems.
+Gebo.ai is an open-source Enterprise AI and retrieval-augmented generation platform designed to connect company knowledge, collaboration systems and business information to modern Large Language Models.
 
-- [GitHub reference](https://github.com/geboai/Gebo.ai/)
-- [Web site](https://gebo.ai)
-- [YouTube channel](https://www.youtube.com/@GeboSystem)
+It is a **No AI vendor lock-in** alternative to single-vendor AI platforms: Gebo.ai can work with cloud AI services, European AI providers, privately hosted models and OpenAI-compatible inference servers, while connecting to widely used enterprise systems.
 
-## Gebo.ai features:
+- **Website:** https://gebo.ai
+- **Documentation:** https://gebo.ai/documents/
+- **GitHub:** https://github.com/geboai/Gebo.ai
+- **YouTube:** https://www.youtube.com/@GeboSystem
+- **Downloads:** https://gebo.ai/downloads/
 
-The admin, chat, rag chat, graphrag chat user interfaces are **fully multilanguage** and the application is **fully multiuser**.
-All the following features are fully configurable using the administrative user interface.
+---
 
-### Users features
+## About this Docker image
 
-- Agentic chat delivering rag, deep searches through company used collaboration suites like Atlassian Jira and Confluence, Microsoft Sharepoint, Google searches and others.
-- Chat using chatbots without retrieve augmented generation according to admin config.
-- Chat using chatbots with retrieve augmented generation according to admin config.
-- Chat with uploaded documents/user documents uploaded in chat session (rag or normal chat sessions).
-- Browse company knowledge bases to select documents to chat/work with according to admin config.
-- Generate **images** directly in chat using configured image generation models.
-- Voice interface (speech to text & text to speech) working with OpenAI provider.
+`geboai/gebo.ai` is the main Gebo.ai application image.
 
-### Administrative features
+It is intended for **Docker Compose and structured deployments**, where Gebo.ai and the required infrastructure services run as separate containers.
 
-All the following features are fully configurable using the administrative user interface.
+For the fastest all-in-one installation, with MongoDB, Qdrant, Neo4j and OpenSearch bundled in a single container, use:
 
-- Configure the large language models to use like:
-    - **OpenAI** chatgpt
-    - **Anthropic** Claude
-    - **AWS Bedrock** (Claude, Amazon Nova, Llama, Mistral & more)
-    - **Google** Vertex AI / Gemini (experimental, disabled by default)
-    - **XaI** Grok
-    - **Nvidia** AI provider
-    - **Groq**
-    - **Deepseek**
-    - **MistralAI**
-    - **Regolo.ai** (Italian/European)
-    - **OpenRouter.ai** (multi-model router)
-    - Almost every local large language model using **Ollama** or **vLLM**
-    - Every provider/local server compatible with **OpenAI API**
-- Configure tools & functions that each llm configuration can use, including **web search** (Google, Tavily, Brave, SerpApi or self-hosted SearXNG)
-- Configure additional AI model types besides chat & embedding models:
-    - **Image generation** models (OpenAI, AWS Bedrock, Regolo.ai, OpenRouter.ai & OpenAI-compatible providers)
-    - **Text to speech** models (OpenAI, AWS Bedrock, Regolo.ai, OpenRouter.ai)
-    - **Speech to text / transcription** models (OpenAI, AWS Bedrock, Regolo.ai, OpenRouter.ai)
-    - **Reranking** models to improve retrieve augmented generation relevance (AWS Bedrock, Regolo.ai, OpenRouter.ai, vLLM & OpenAI-compatible providers)
-- Most providers support **guided fast-setup** with ready-to-use model presets and automatic models lookup
-- Connect to **Model Context Protocol (MCP)** servers to give your chatbots extra tools & data sources, or expose Gebo.ai itself as an **MCP server**
-- Configure gebo.ai rag system to access several company documents repository and information sharing tools such as:
-    - **Microsoft Onedrive/Sharepoint**
-    - **Atlassian Confluence**
-    - **Atlassian Jira**
-    - **Google Workspaces/Drives**
-    - **GitHub/GIT/Bitbucket** or other **git** compatible servers
-    - Company shared filesystems
-    - **Amazon AWS S3** buckets
-- Configure **company single sign** on (SSO) using one of the following oauth2 providers:
-    - **Microsoft Entra**
-    - **Google auth**
-    - **AWS Cognito**
-    - **KeyCloak** (as Generic oauth2)
-- Configure **GraphRag** features (experimental)
-    - The software can use cheap models provided (on premise or in cloud) to export knowledge graphs persisted with neo4j.
-- Create knowledge bases collectioning documents from the previus mentioned system.
-- Schedule document updates for AI reindexing (embedding) on updates.
-- Monitor embedding batch job.
-- Configure company users and groups.
-- Organize multiple specific Retrieve augmented generation chats for specific company tasks:
-    - Examples:
-        - Customer support **chatbots to support customer support employees or directly the customers**
-        - Tech/Production **productivity chatbots to support employee on mananging internal technical documentation**.
-- Chatbot access can be granted individually to users/groups
-- Knowledge bases can be granted individually to users/groups
-
-## How to run Gebo.ai
-
-Use the following docker-compose.yml file
-
-```docker
-version: '3.1'
-#================================================================
-# This compose file creates a service for gebo.ai enterprise retrive augmented generation system
-# and its required mongodb (database) and qdrant (vector database) services
-# once runned simply open the address http://<your host address:12999/ with your browser
-# it will be required to create the administrative account and you'll be ready to setup and
-# start immediately to share the application with your company or team.
-services:
-  # =======================
-  # MongoDB
-  # =======================
-  # Bound only on loopback interface for security reasons
-  mongo:
-    image: mongo
-    restart: always
-    ports:
-      - "127.0.0.1:27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: mongoroot
-      MONGO_INITDB_ROOT_PASSWORD: mongopwd
-    command: ["mongod", "--wiredTigerCacheSizeGB=1"]
-
-  # =======================
-  # Qdrant
-  # =======================
-  # Bound only on loopback interface for security reasons
-  qdrant:
-    image: qdrant/qdrant
-    restart: always
-    ports:
-      - "127.0.0.1:6333:6333"
-      - "127.0.0.1:6334:6334"
-    environment:
-      QDRANT__SERVICE__API_KEY: ce7c85bc-f037-4c64-91d8-70335638329d
-      QDRANT__STORAGE__OPTIMIZE_INDEXING: "true"
-      QDRANT__STORAGE__RAM_DISK_SIZE: "256MB"
-      QDRANT__STORAGE__MAX_SEGMENT_SIZE: "1000000"
-
-  neo4j:
-     image: neo4j:5
-     restart: always
-     ports:
-      - "127.0.0.1:7474:7474"
-      - "127.0.0.1:7687:7687"
-     environment:
-      NEO4J_AUTH: "neo4j/neo4jmaster"
-      NEO4J_server_memory_heap_initial__size: 1G
-      NEO4J_server_memory_heap_max__size: 2G
-      NEO4J_server_memory_pagecache_size: 512M
-      NEO4JLABS_PLUGINS: '["apoc"]'
-      NEO4J_apoc_export_file_enabled: "true"
-      NEO4J_apoc_import_file_enabled: "true"
-      NEO4J_apoc_import_file_use__neo4j__config: "true"
-  opensearch:
-    image: opensearchproject/opensearch:latest
-    container_name: opensearch
-    environment:
-      - discovery.type=single-node
-      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=dothesearch1973-Advanced
-      - plugins.security.ssl.http.enabled=true
-      - plugins.security.ssl.transport.enabled=true
-      # consigliato in docker (evita bootstrap checks su memlock)
-      - bootstrap.memory_lock=true
-      # heap: regola in base alla RAM della macchina
-      - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    ports:
-      - "9200:9200"
-      - "9600:9600"
-
-  # =======================
-  # gebo.ai
-  # =======================
-  # Bound to all host interface
-  gebo.ai:
-    image: geboai/gebo.ai
-    restart: always
-    ports:
-      - "12999:12999"
-    depends_on:
-      - mongo
-      - qdrant
-      - neo4j
-      - opensearch
-    deploy:
-      resources:
-        limits:
-          # Limit memory usage to 4GB
-          memory: 4G
-
-    environment:
-      #SPRING_PROFILES_ACTIVE: "prod"
-      #Jvm settings
-      JAVA_TOOL_OPTIONS:
-        --enable-native-access=ALL-UNNAMED
-        -Dsun.jnu.encoding=UTF-8
-        -Dfile.encoding=UTF-8
-        -Dai.gebo.neo4j.enabled=true
-        -XX:+AggressiveHeap
-        -XX:+PrintGCDetails
-        -Xlog:gc:/opt/gebo.ai/logs/gc.log
-        -Xms2g
-        -Xmx4g
-        -XX:MaxMetaspaceSize=512m
-        --add-opens=java.base/java.nio.charset=ALL-UNNAMED
+```text
+geboai/easyinstall.gebo.ai
 ```
 
-- **for detailed setup use the following documentation** [Gebo.ai documentation](https://gebo.ai/documents/)
+| Image | Recommended use |
+|---|---|
+| `geboai/gebo.ai` | Docker Compose, persistent installations and structured deployments |
+| `geboai/easyinstall.gebo.ai` | Fast evaluation and compact all-in-one installations |
 
-### Post install configuration procedure:
+---
 
-After you've installed with docker go to [http://your-server-ip:12999/](http://your-server-ip:12999/) and configure your used llms provider, enterprise rag system account & setup your system with all company tools integrations (like sharepoint/jira/confluence, google searches ecc...). **Follow these steps**:
-[Setting up Gebo.ai](https://gebo.ai/first-gebo-ai-server-first-startup-step-creating-admin-account/)
+# Quick start with Docker Compose
 
-### What the docker-compose file installs
+Use the **canonical Docker Compose configuration maintained in the Gebo.ai GitHub repository**.
 
-The docker-compose file installs the required
+Do not copy an old Compose file from documentation or previous releases: the repository version contains the current persistence, infrastructure and observability configuration.
 
+## Linux
+
+You do not need to clone the whole repository. Create a folder, download the current `docker-compose.yml` into it, and start the stack:
+
+```bash
+mkdir gebo.ai && cd gebo.ai
+curl -O https://raw.githubusercontent.com/geboai/Gebo.ai/develop/dockers/gebo.ai/docker-compose.yml
+docker compose pull
+docker compose up -d
+```
+
+Then open:
+
+```text
+http://<your-server-ip>:12999/
+```
+
+## Docker Desktop for Windows
+
+A Windows-specific Compose configuration is maintained in the repository. As on Linux, you do not need to clone it — create a folder, download the current Windows `docker-compose.yml` into it, and start the stack:
+
+```powershell
+mkdir gebo.ai; cd gebo.ai
+curl.exe -O https://raw.githubusercontent.com/geboai/Gebo.ai/develop/dockers/gebo.ai/windows/docker-compose.yml
+docker compose pull
+docker compose up -d
+```
+
+Then open `http://localhost:12999/`.
+
+For complete installation options visit:
+
+https://gebo.ai/downloads/
+
+On the first startup, create the local administrative account and then configure AI providers, enterprise data sources, users, groups and chatbots from the Gebo.ai administration interface.
+
+First-start documentation:
+
+https://gebo.ai/first-gebo-ai-server-first-startup-step-creating-admin-account/
+
+---
+
+# What the Docker Compose deployment includes
+
+The current monolithic Docker Compose deployment includes:
+
+- **Gebo.ai**
+- **MongoDB** — application state, users, configuration and chat history
+- **Qdrant** — vector database
+- **Neo4j** — GraphRAG / knowledge graph storage
+- **OpenSearch** — full-text search
+- **OpenTelemetry Collector** — telemetry collection
+- **Prometheus** — metrics
+- **Grafana Tempo** — distributed traces
+- **Grafana** — dashboards
+
+The official Compose configuration uses **Docker named volumes** for persistent application and infrastructure data.
+
+---
+
+# Enterprise AI without vendor lock-in
+
+Gebo.ai lets organizations choose the AI infrastructure that best fits each workload instead of tying company knowledge to a single AI provider.
+
+Supported providers and inference infrastructures include:
+
+- **OpenAI**
+- **Anthropic Claude**
+- **AWS Bedrock**
+- **Google Vertex AI / Gemini** *(experimental / disabled by default where indicated by the application)*
+- **xAI Grok**
+- **NVIDIA AI**
+- **Groq**
+- **DeepSeek**
+- **Mistral AI**
+- **Regolo.ai**
+- **OpenRouter**
+- **Ollama**
+- **vLLM**
+- other **OpenAI API-compatible** providers and local inference servers
+
+Most providers support guided configuration, ready-to-use model presets and/or automatic model lookup.
+
+Gebo.ai supports several model roles, including:
+
+- chat models
+- embedding models
+- reranking models
+- image-generation models
+- speech-to-text / transcription models
+- text-to-speech models
+
+This makes it possible to combine public cloud APIs, private cloud infrastructure, European providers and fully on-premise models in the same platform.
+
+---
+
+# Enterprise RAG and company knowledge
+
+Gebo.ai can build AI-searchable knowledge bases from the systems your organization already uses.
+
+Supported information sources include:
+
+- **Microsoft OneDrive / SharePoint**
+- **Atlassian Confluence**
+- **Atlassian Jira**
+- **Google Workspace / Google Drive**
+- **GitHub**
+- **Bitbucket**
+- other **Git-compatible** repositories
+- company shared filesystems
+- **Amazon S3**
+- **WebDAV-compatible** repositories
+
+WebDAV support can be used with platforms such as:
+
+- Nextcloud
+- ownCloud
+- OpenCloud
+- Pydio Cells
+- Seafile / SeafDAV
+- ONLYOFFICE Workspace
+- Synology DSM WebDAV Server
+
+Administrators can create multiple knowledge bases, schedule document discovery and AI re-indexing/embedding jobs, monitor ingestion activity and control access per user or group.
+
+---
+
+# AI Agents
+
+Gebo.ai is not limited to conventional RAG chat.
+
+Chatbots can use configurable **tools and functions** and can work with specialized AI agents to combine enterprise knowledge with external capabilities.
+
+Typical capabilities include:
+
+- enterprise knowledge retrieval
+- web search
+- Deep Search
+- MCP tools
+- document analysis
+- multimodal interaction
+- specialized searching agents
+- multi-source information gathering
+
+Access to chatbots and knowledge bases can be granted individually to users and groups.
+
+---
+
+# Model Context Protocol — MCP
+
+Gebo.ai supports **Model Context Protocol (MCP)** in both directions.
+
+It can:
+
+- connect to external **MCP servers**
+- expose MCP tools to configured chatbots and agents
+- use MCP tools together with RAG and enterprise knowledge
+- expose Gebo.ai itself as an **MCP server**
+
+This allows Gebo.ai to operate as an integration layer between enterprise information, AI applications and the wider MCP ecosystem.
+
+---
+
+# Enterprise Deep Search
+
+Deep Search works on a complex question through multiple research steps instead of relying on a single retrieval.
+
+A Deep Search can:
+
+1. break the question into multiple searches;
+2. execute searches in parallel;
+3. query multiple sources the user is authorized to access;
+4. open and analyze the retrieved information;
+5. discard irrelevant evidence;
+6. consolidate the findings;
+7. produce a final answer with references.
+
+Available sources include:
+
+- Gebo.ai company knowledge bases
+- **Atlassian Confluence**
+- **Atlassian Jira**
+- **Microsoft SharePoint / OneDrive**
+- **Google Workspace / Drive**
+- the **Web**
+
+The user chooses which available sources participate in each search, while the administrator controls which data sources each user or group is allowed to use.
+
+---
+
+# Web Search
+
+A web-search provider can be configured from the Gebo.ai administration interface.
+
+Supported providers include:
+
+- **Google Programmable Search**
+- **Tavily**
+- **Brave Search**
+- **SerpApi**
+- **SearXNG**
+
+A self-hosted SearXNG instance can be used by organizations that prefer not to send search queries to an external search vendor.
+
+The configured web-search capability is available:
+
+- as a tool callable during normal chat;
+- as a Deep Search source;
+- to specialized searching agents.
+
+Depending on the selected provider, AI-generated searches can also control parameters such as recency, content type, country, language, safe-search level and underlying search engine.
+
+---
+
+# End-user capabilities
+
+Depending on administrator configuration and permissions, users can:
+
+- chat with general-purpose AI assistants;
+- use Enterprise RAG chatbots;
+- work with documents uploaded directly into a chat session;
+- browse authorized company knowledge bases;
+- run Deep Searches;
+- use tools and MCP capabilities;
+- generate images with configured image models;
+- use speech-to-text and text-to-speech capabilities.
+
+Gebo.ai is **multi-user** and its administration and chat interfaces are **multilanguage**.
+
+---
+
+# Authentication and access control
+
+Gebo.ai supports local users/groups and enterprise Single Sign-On.
+
+OAuth2 / OpenID Connect integrations include:
+
+- **Microsoft Entra**
+- **Google**
+- **AWS Cognito**
+- **Keycloak / generic OAuth2**
+
+Administrators can independently grant users and groups access to chatbots, knowledge bases and enterprise information sources.
+
+---
+
+# GraphRAG
+
+Gebo.ai includes **experimental GraphRAG capabilities**.
+
+Configured language models can extract knowledge graphs from enterprise information and persist graph data in **Neo4j**, allowing graph-based knowledge representation to complement conventional vector retrieval.
+
+---
+
+# LLM usage monitoring
+
+Gebo.ai includes built-in dashboards for AI usage monitoring.
+
+Usage can be analyzed by:
+
+- provider
+- model
+- model type
+- user
+- month
+- number of calls
+- token consumption
+
+Tracked model types include chat, embedding, image generation, reranking, text-to-speech and transcription.
+
+Administrators can inspect organization-wide activity while users can inspect their own usage.
+
+---
+
+# Security & compliance capabilities
+
+Gebo.ai includes built-in capabilities designed to assist enterprise security, traceability and compliance workflows.
+
+## Security audit logging — Wazuh / SIEM compatible
+
+Security-relevant events are written to a dedicated append-only JSON Lines audit trail.
+
+Audited activity includes:
+
+- local and SSO login/logout attempts;
+- LLM configuration changes;
+- LLM invocation metadata;
+- API-key and secret lifecycle changes;
+- third-party integration changes;
+- user administration.
+
+LLM audit events record invocation metadata such as model, provider, outcome and latency — **not prompt or response content**.
+
+The audit trail is designed for **Wazuh / SIEM integration**.
+
+## Records of processing and data-flow register
+
+The administration interface includes a live records-of-processing and data-flow register designed to assist with **GDPR and NIS2-related governance workflows**.
+
+It can represent:
+
+- data sources;
+- transformation components;
+- retaining stores;
+- external providers;
+- personal-data scope;
+- retention and erasure information;
+- flows between components;
+- security-audit status.
+
+The register includes an interactive data-flow graph and CSV export.
+
+These capabilities assist compliance activities; using Gebo.ai does not by itself constitute legal or regulatory compliance.
+
+Documentation:
+
+- Security & compliance: https://github.com/geboai/Gebo.ai/blob/develop/docs/security-and-compliance.md
+- Wazuh integration: https://github.com/geboai/Gebo.ai/blob/develop/docs/wazuh-integration.md
+
+---
+
+# Observability
+
+The official Docker Compose deployment includes an observability stack based on:
+
+- **OpenTelemetry Collector**
+- **Prometheus**
+- **Grafana Tempo**
+- **Grafana**
+
+Gebo.ai uses **Micrometer** and **Spring Boot Actuator** for metrics and **OpenTelemetry / OTLP** for distributed tracing.
+
+Application and JVM metrics include areas such as:
+
+- JVM health and memory;
+- HTTP traffic;
+- application/service activity;
+- message-routing metrics in distributed deployments.
+
+Grafana is pre-provisioned with Prometheus and Tempo data sources and a starter Gebo.ai dashboard.
+
+With the current monolithic Compose configuration, Grafana is bound to the Docker host loopback interface on port `3000`.
+
+```text
+http://localhost:3000/
+```
+
+Expose or proxy it explicitly if remote access is required.
+
+Infrastructure observability is independent from the built-in Gebo.ai **LLM usage dashboards**.
+
+---
+
+# Persistence and backups
+
+The official monolithic Docker Compose configuration uses **named volumes** for the application and infrastructure state that must survive container recreation and upgrades.
+
+Persistent data includes:
+
+- users and application configuration;
+- knowledge-base metadata;
+- chat history;
+- uploaded/session documents;
+- local content mirrors;
+- document caches and chunks;
+- OAuth tokens;
+- vector embeddings;
+- GraphRAG data;
+- OpenSearch indexes;
+- security audit logs;
+- observability history.
+
+## Critical backup rule
+
+`GEBO_WORK_DIRECTORY` and MongoDB form **one logical backup unit**.
+
+The work directory contains durable files and documents while MongoDB contains references and indexes pointing to those files.
+
+> **Always back up and restore the Gebo.ai work volume and MongoDB together.**
+
+For the current volume layout, backup procedures, migration from older anonymous volumes and upgrade instructions, read:
+
+https://github.com/geboai/Gebo.ai/blob/develop/dockers/PERSISTENCE.md
+
+## Updating the Compose deployment
+
+Normally:
+
+```bash
+docker compose pull
+docker compose up -d
+```
+
+Named volumes survive container recreation.
+
+> **Never run `docker compose down -v` on a live installation unless you intentionally want to delete its persistent Docker volumes and data.**
+
+---
+
+# Deployment options
+
+Gebo.ai can be deployed in several forms:
+
+| Deployment | Intended scenario |
+|---|---|
+| `easyinstall.gebo.ai` | Single-container evaluation / compact installation |
+| `gebo.ai` + Docker Compose | Persistent monolithic deployment |
+| Docker Compose microservices | Distributed service architecture |
+| Kubernetes / Helm | Orchestrated microservices deployment |
+
+The distributed architecture separates capabilities into independently deployable services for AI orchestration, vectorization, GraphRAG, document processing and enterprise connectors, together with service discovery, gateway and messaging infrastructure.
+
+Current deployment definitions:
+
+- Monolith Docker Compose: https://github.com/geboai/Gebo.ai/tree/develop/dockers/gebo.ai
+- Microservices Docker Compose: https://github.com/geboai/Gebo.ai/tree/develop/dockers/gebo.microservices
+- Kubernetes / Helm: https://github.com/geboai/Gebo.ai/tree/develop/deploy/helm/gebo-microservices
+
+For Kubernetes and microservices deployments, follow the current repository documentation and persistence notes rather than assuming the monolithic Docker Compose storage model applies unchanged.
+
+---
+
+# For developers, software architects and software companies
+
+Gebo.ai is also an open-source foundation for companies building Enterprise AI solutions.
+
+The project is built with technologies including:
+
+- **Java**
+- **Spring Boot**
+- **Spring AI**
+- **Angular**
+- **PrimeNG**
 - MongoDB
-- Qdrant Vector Database
-- Neo4J Graph Database
+- Qdrant
+- Neo4j
 - OpenSearch
-- geboai/gebo.ai open source version software https://hub.docker.com/r/geboai/gebo.ai
+- OpenTelemetry
 
-## Gebo.ai licence:
+The same codebase can operate as a monolithic application or as a distributed microservices architecture.
 
-The open source version is available under a variation of the Mozilla Public License Version 2.0 (MPL-2.0), an enterprise version with more feature and support is also available.
+Source code and build information:
 
-- [Click here to see the licence](https://github.com/geboai/Gebo.ai/blob/develop/LICENCE.md)
-- [Click here the ORIGIN declaration](https://github.com/geboai/Gebo.ai/blob/develop/ORIGIN.md)
+https://github.com/geboai/Gebo.ai
 
-## For devs/software architects/software companies
+---
 
-This software is build with latest **spring boot** technologies and the new **spring-ai framework**, with UI developed in **Angular 19+PRIMENG**.
-Is made to accelerate professionals/companies that invested in these technologies to accelerate your own business opportunities start building having this as base.
+# Gebo.ai licence
 
-The platform can run either as a single **bootable jar** (monolith, this image) or be deployed as a set of **20 distributed microservices** with **Eureka** service discovery and **Hazelcast** clustering for horizontal scalability and high availability.
+The community/open-source edition is distributed under the **Gebo.ai community license based on Mozilla Public License 2.0 (MPL-2.0) with Data Protection Clauses**.
 
-| Target | What | Where |
-|---|---|---|
-| Monolith (this image) | One bootable jar + external infra via docker-compose | `dockers/gebo.ai/docker-compose.yml` |
-| Easy install | All-in-one single container (embedded infra) | `docker run -p 12999:12999 geboai/easyinstall.gebo.ai` |
-| Docker Compose microservices | 20 containerized microservices + infra | `dockers/gebo.microservices/docker-compose.yml` |
-| Kubernetes (Helm) | Microservices stack as Helm charts with per-service install toggles & observability | `deploy/helm/gebo-microservices` |
+Please review the canonical licensing documents before redistribution or production use:
 
-### How to build the software:
+- Licence: https://github.com/geboai/Gebo.ai/blob/develop/LICENCE.md
+- Origin declaration: https://github.com/geboai/Gebo.ai/blob/develop/ORIGIN.md
+- Licence page: https://gebo.ai/gebo-ai-community-version-mozilla-public-license-version-2-0-mpl-2-0-with-data-protection-clauses/
 
-- Use Maven 3.8+
-- Use JDK 20+
-- Run "mvn clean package -P bootables,angular-ui"
-- The Bootable jar file will be generated in: /gebo.ai.app/target
+An Enterprise edition with additional capabilities and commercial support is also available.
+
+---
+
+# Resources
+
+- **Website:** https://gebo.ai
+- **Documentation:** https://gebo.ai/documents/
+- **Downloads:** https://gebo.ai/downloads/
+- **GitHub:** https://github.com/geboai/Gebo.ai
+- **Docker Hub — main image:** https://hub.docker.com/r/geboai/gebo.ai
+- **Docker Hub — Easy Install:** https://hub.docker.com/r/geboai/easyinstall.gebo.ai
+- **YouTube:** https://www.youtube.com/@GeboSystem
+
+---
+
+**Own your data. Choose your models. Connect your enterprise knowledge.**
